Fixed Amenities spacing on mobile

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </section>
 	
 	<!-- Portfolio -->
-    <section id="portfolioHouse" class="portfolio">
+    <section id="portfolioAmenities" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
