--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <h1>The St. Clair River House</h1>
 			<a href="#about" class="btn btn-light btn-lg" data-toggle="modal" data-target="#ourStoryModal">Our Story</a>
             <a href="#about" class="btn btn-dark btn-lg" style="margin-left:10px;">Rental Details</a>
-			<div id="hiddenSpacer" class="hidden-xs">&nbsp;</div>
+			<div id="DesktopSpacer" class="hidden-xs">&nbsp;</div>
+			<div id="MobileSpacer" class="visible-xs">&nbsp;</div>
             <h3>Up Close and Personal with the Great Lakes Freighters</h3>
         </div>
     </header>
