--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     <strong>2 Full Baths</strong>
                                 </h4>
                                 <p>One with walk-in shower.<br>
-									The other has a walk-in shower, jacuzzi tub and heated floors.
+									The other has walk-in shower, jacuzzi tub and heated floors.
 								</p>
                                 <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
                             </div>
@@ -152,7 +152,7 @@
                                 <h4>
                                     <strong>Social Space</strong>
                                 </h4>
-                                <p>Dining room, front porch, a living room with 70" TV, and a sunroom with gorgeous river views.</p>
+                                <p>Dining room, front porch, a living room with 60" TV, and a sunroom with gorgeous river views.</p>
                                 <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
