Updated e-mail address

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <br>Marine City, MI 48039</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (810) 643-1232</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">SCRGetaway@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:info@StClairRiverHouse.com">info@StClairRiverHouse.com</a>
                         </li>
                     </ul>
 					</address>
