Updated beds & upload exterior photos

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                                 <h4>
                                     <strong>3 Bedrooms</strong>
                                 </h4>
-                                <p> Queen <br>
-									Queen + 2 Twins (Bunk Beds)<br>
-									Queen + Full
+                                <p> King<br>
+									Queen<br>
+									Queen + 2 Twins (Bunk Beds)
 								</p>
                                 <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
                             </div>
