--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ font-family: font121313;
                     <h3><strong>The St. Clair River House</strong>
                     </h4>
 					<address>
-                    <p>8105 River Rd.
+                    <p>River Rd.
                         <br>Marine City, MI 48039</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (810) 643-1175</li>
