--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ The St.Clair River House was built as a cottage in 1935 as a Detroiter's vacatio
 			<span style="color:red;">Special Pricing:</span><br>
 			<ul>
 				<li>$175/week night</li>
-				<li>$200/weekend ninght</li>
+				<li>$200/weekend night</li>
 				<li>3 night minimum</li>
 				<li>$1,100/week</li>
 				<li>$2,475/month</li>
