--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The St. Clair River House - A Vacation Rental</title>
+    <title>The St. Clair River House - Ship Watcher's Paradise on the St. Clair River</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,32 +42,38 @@
 <body>
 
     <!-- Navigation -->
-	<!--
+	
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>The St. Clair River House</a>
+                <a href="#top" onclick=$("#menu-close").click();>St. Clair River House</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="#theViews" onclick=$("#menu-close").click();>The Views</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
+                <a href="#theHouse" onclick=$("#menu-close").click();>The House</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+                <a href="#amenities" onclick=$("#menu-close").click();>Amenities</a>
+            </li>
+			<li>
+                <a href="#rates" onclick=$("#menu-close").click();>Rates</a>
+            </li>
+			<li>
+                <a href="#availability" onclick=$("#menu-close").click();>Availability</a>
             </li>
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
         </ul>
     </nav>
--->
+
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
@@ -178,8 +184,8 @@
         </div>
     </aside>
 
-    <!-- Portfolio Views -->
-    <section id="portfolioViews" class="portfolio">
+    <!-- Views -->
+    <section id="theViews" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -224,8 +230,8 @@
         <!-- /.container -->
     </section>
 	
-	<!-- Portfolio House -->
-    <section id="portfolioHouse" class="portfolio">
+	<!-- House -->
+    <section id="theHouse" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -276,8 +282,8 @@
 		</div>
 	</section>
 	
-	<!-- Portfolio Amenities -->
-    <section id="portfolioAmenities" class="portfolio">
+	<!-- Amenities -->
+    <section id="amenities" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -329,7 +335,7 @@
     </section>
 	
     <!-- Beta Rental -->
-    <aside class="call-to-action bg-primary">
+    <aside id="rates" class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -345,7 +351,7 @@
     </aside>
 	
 	<!-- Calendar -->
-    <section id="portfolioCalendar" class="portfolio">
+    <section id="availability" class="portfolio">
         <div class="container" id="calendarContainer">
             <div class="row">
                 <div class="col-lg-12 text-center">
