Added Facebook OG Tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+	<!-- Facebook Open Graph Tags -->
+	<meta property="og:title" content="The St. Clair River House - A Ship Watcher's Paradise"/>
+	<meta property="og:type" content="place"/>
+	<meta property="og:url" content="http://www.stclairriverhouse.com"/>
+	<meta property="og:image" content="http://www.stclairriverhouse.com/img/bg1.jpg"/>
+	<meta property="fb:admins" content="susie.duhaime,andrew.duhaime"/>
+	<meta property="og:email" content="info@StClairRiverHouse.com"/>
+	<meta property="og:description" content="Make this 3bd/2bth vacation rental your home in Marine City. Enjoy the Caribbean-blue water, watch a thousand foot ship go by right in front of you, catch a walleye right from the dock in the spring, or watch the Coast Guard break ice in the winter. "/>
+
 
     <title>The St. Clair River House - Ship Watcher's Paradise on the St. Clair River</title>
 
