More updating FB OG Tags

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<!-- Facebook Open Graph Tags -->
 	<meta property="og:title" content="The St. Clair River House - A Ship Watcher's Paradise"/>
 	<meta property="og:type" content="place"/>
+	<meta property="place:location:latitude"  content="42.666484" /> 
+	<meta property="place:location:longitude" content="-82.514607" /> 
 	<meta property="og:url" content="http://www.stclairriverhouse.com"/>
 	<meta property="og:image" content="http://www.stclairriverhouse.com/img/bg1.jpg"/>
 	<meta property="fb:admins" content="susie.duhaime,andrew.duhaime"/>
