--- a/index.html
+++ b/index.html
@@ -251,41 +251,39 @@
 					<div class="carousel slide article-slide" id="house-photo-carousel">
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner cont-slider">
-						<div class="item active"><img alt="" title="" src="img/Exterior/Exterior0.jpg"></div>
+						<div class="item active"><img alt="" title="" src="img/Exterior/FrontOfHouse.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Interior/Kitchen.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Interior/DiningRoom.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Stairs From Dining Room.jpg"></div>					
-						<div class="item"><img alt="" title="" src="img/Interior/BathroomDownstairs1Wide.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/BathroomDownstairs2Wide.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Fireplace.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/UpstairsTub.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/UpstairsShowerWide.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/BathroomUpstairs1Wide.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/BathroomUpstairs2Wide.jpg"></div>						
-						<div class="item"><img alt="" title="" src="img/Interior/FirstFloorPlan2.jpg"></div>						
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs.jpg"></div>					
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs2.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs3.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs4.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/DBath4-White.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/UpstairsBathroom.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Composite.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/GreenRoom.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/BedroomWithBunks.jpg"></div>						
+						<div class="item"><img alt="" title="" src="img/Interior/FirstFloorPlan.jpg"></div>						
 						<div class="item"><img alt="" title="" src="img/Interior/SecondFloorPlan.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Interior2.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Exterior/Exterior2.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Exterior/Exterior4.jpg"></div>
 					  </div>
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
-						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior0.jpg"></li>
+						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/FrontOfHouse.jpg"></li>
 						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Kitchen.jpg"></li>
 						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DiningRoom.jpg"></li>
-						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Stairs From Dining Room.jpg"></li>
-						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BathroomDownstairs1Wide.jpg"></li>
-						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BathroomDownstairs2Wide.jpg"></li>
-						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Fireplace.jpg"></li>
-						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/UpstairsTub.jpg"></li>
-						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/UpstairsShowerWide.jpg"></li>
-						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BathroomUpstairs1Wide.jpg"></li>
-						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BathroomUpstairs2Wide.jpg"></li>
-						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/FirstFloorPlan.jpg"></li>
-						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/SecondFloorPlan.jpg"></li>
-						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Interior2.jpg"></li>
-						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior2.jpg"></li>
-						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior4.jpg"></li>
+						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs.jpg"></li>
+						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs2.jpg"></li>
+						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs3.jpg"></li>
+						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs4.jpg"></li>
+						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DBath4-White.jpg"></li>
+						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/UpstairsBathroom.jpg"></li>
+						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Composite.jpg"></li>
+						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/GreenRoom.jpg"></li>
+						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/BedroomWithBunks.jpg"></li>
+						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/FirstFloorPlan.jpg"></li>
+						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/SecondFloorPlan.jpg"></li>
+						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior4.jpg"></li>
 					  </ol>
 					</div>
 				</div>
@@ -369,7 +367,10 @@
                     <h2>Availability</h2>
                     <hr class="small">
 						<!-- <script id='vr_MzE4LS01OTA5YzM4YzkyYTgx'>window.options = { api_key:'MzE4LS01OTA5YzM4YzkyYTgx',height:'1000px',width:'100%',min_height:'1000px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script>					-->
-						<script id='vr_MzE4LS01OTBiNTQyNDdlYzFh'>window.options = { api_key:'MzE4LS01OTBiNTQyNDdlYzFh',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script>
+						<!-- <script id='vr_MzE4LS01OTBiNTQyNDdlYzFh'>window.options = { api_key:'MzE4LS01OTBiNTQyNDdlYzFh',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
+						
+						<script id='vr_NDYwLS01OTQ3MzYwYTkzNzg1'>window.options = { api_key:'NDYwLS01OTQ3MzYwYTkzNzg1',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script>
+						<!-- <script id='vr_NDYxLS01OTQ3M2Q5ODcxY2E4'>window.options = { api_key:'NDYxLS01OTQ3M2Q5ODcxY2E4',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
 				</div>
                 <!-- /.col-lg-10 -->
             </div>
