Added porch picture.

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner cont-slider">
 						<div class="item active"><img alt="" title="" src="img/Exterior/FrontOfHouse.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Porch3.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Interior/Kitchen.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Interior/DiningRoom.jpg"></div>
 						<div class="item"><img alt="" title="" src="img/Interior/Downstairs.jpg"></div>					
@@ -270,20 +271,21 @@
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
 						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/FrontOfHouse.jpg"></li>
-						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Kitchen.jpg"></li>
-						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DiningRoom.jpg"></li>
-						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs.jpg"></li>
-						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs2.jpg"></li>
-						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs3.jpg"></li>
-						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs4.jpg"></li>
-						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DBath4-White.jpg"></li>
-						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/UpstairsBathroom.jpg"></li>
-						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Composite.jpg"></li>
-						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/GreenRoom.jpg"></li>
-						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/BedroomWithBunks.jpg"></li>
-						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/FirstFloorPlan.jpg"></li>
-						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/SecondFloorPlan.jpg"></li>
-						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior4.jpg"></li>
+						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Porch3.jpg"></li>
+						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Kitchen.jpg"></li>
+						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DiningRoom.jpg"></li>
+						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs.jpg"></li>
+						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs2.jpg"></li>
+						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs3.jpg"></li>
+						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs4.jpg"></li>
+						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DBath4-White.jpg"></li>
+						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/UpstairsBathroom.jpg"></li>
+						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Composite.jpg"></li>
+						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/GreenRoom.jpg"></li>
+						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/BedroomWithBunks.jpg"></li>
+						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/FirstFloorPlan.jpg"></li>
+						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Interior/SecondFloorPlan.jpg"></li>
+						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior4.jpg"></li>
 					  </ol>
 					</div>
 				</div>
