Switched calendar over to HomeEscape Widget

--- a/index.html
+++ b/index.html
@@ -365,14 +365,14 @@
     <section id="availability" class="portfolio">
         <div class="container" id="calendarContainer">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 text-center">
                     <h2>Availability</h2>
                     <hr class="small">
-						<!-- <script id='vr_MzE4LS01OTA5YzM4YzkyYTgx'>window.options = { api_key:'MzE4LS01OTA5YzM4YzkyYTgx',height:'1000px',width:'100%',min_height:'1000px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script>					-->
-						<!-- <script id='vr_MzE4LS01OTBiNTQyNDdlYzFh'>window.options = { api_key:'MzE4LS01OTBiNTQyNDdlYzFh',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
-						
-						<script id='vr_NDYwLS01OTQ3MzYwYTkzNzg1'>window.options = { api_key:'NDYwLS01OTQ3MzYwYTkzNzg1',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script>
-						<!-- <script id='vr_NDYxLS01OTQ3M2Q5ODcxY2E4'>window.options = { api_key:'NDYxLS01OTQ3M2Q5ODcxY2E4',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
+						<!-- <script id='vr_NDYwLS01OTQ3MzYwYTkzNzg1'>window.options = { api_key:'NDYwLS01OTQ3MzYwYTkzNzg1',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
+						<div style="width: 100%">
+							<iframe class="xs-excluded" src="https://www.homeescape.com/iframe/calendar/63135537/?o=h&m=9" frameborder="0" width="100%" height="650" id="calendar-container"></iframe>
+				            <iframe class="xs-only" src="https://www.homeescape.com/iframe/calendar/63135537/?o=v&m=3" frameborder="0" width="350" height="670" id="calendar-container"></iframe>
+						</div>						
 				</div>
                 <!-- /.col-lg-10 -->
             </div>
