Removed LearnMore buttons and made Cuchipanda img responsive
Removed LearnMore buttons and made Cuchipanda img responsive

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									Queen<br>
 									Queen + 2 Twins (Bunk Beds)
 								</p>
-                                <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#portfolioHouse" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -153,9 +153,9 @@
                                     <strong>2 Full Baths</strong>
                                 </h4>
                                 <p>One with walk-in shower.<br>
-									The other has walk-in shower, jacuzzi tub and heated floors.
+									The other has walk-in shower, bidet, jacuzzi tub and heated floors.
 								</p>
-                                <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#portfolioHouse" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -168,7 +168,7 @@
                                     <strong>Fully Equipped Kitchen</strong>
                                 </h4>
                                 <p>Full size stove, oven, refrigerator, microwave & dishawsher. Includes place settings and cooking supplies. </p>
-                                <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#portfolioHouse" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -181,7 +181,7 @@
                                     <strong>Social Space</strong>
                                 </h4>
                                 <p>Dining room, front porch, living room with 60" TV, & sunroom with gorgeous river views.</p>
-                                <a href="#portfolioHouse" class="btn btn-light">Learn More</a>
+                                <!-- <a href="#portfolioHouse" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                     </div>
