--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 text-center">
                     <h2>Availability</h2>
                     <hr class="small">
+					<div class="row"><a class="btn btn-primary btn-lg" href="mailto:info@StClairRiverHouse.com?subject=St. Clair River House - Direct Booking Request">Request to Book</a>
 						<!-- <script id='vr_NDYwLS01OTQ3MzYwYTkzNzg1'>window.options = { api_key:'NDYwLS01OTQ3MzYwYTkzNzg1',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
 						<div style="width: 100%">
 							<iframe class="xs-excluded" src="https://www.homeescape.com/iframe/calendar/63135537/?o=h&m=9" frameborder="0" width="100%" height="650" id="calendar-container"></iframe>
