Added Social Media links

--- a/index.html
+++ b/index.html
@@ -720,19 +720,19 @@
                     </ul>
 					</address>
                     <br>
-					<!--
+					
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="http://www.facebook.com/StClairRiverHouse" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
+                        </li> -->
                         <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="https://www.instagram.com/StClairRiverHouse" target="_blank"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
-					-->
+					
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; The St. Clair River House 2017</p>
                 </div>
