Changed calendar over to ownerrez

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	
 	<!-- Bootstrap Lightbox  -->
     <link href="css/ekko-lightbox.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
+	
+	<!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -627,19 +627,18 @@
         </div>
     </aside>
 	
-	<!-- Calendar -->
+		<!-- Calendar -->
     <section id="availability" class="portfolio">
-        <div class="container" id="calendarContainer">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 text-center">
                     <h2>Availability</h2>
                     <hr class="small">
-					<div class="row"><a class="btn btn-primary btn-lg" href="mailto:info@StClairRiverHouse.com?subject=St. Clair River House - Direct Booking Request">Request to Book</a>
-						<!-- <script id='vr_NDYwLS01OTQ3MzYwYTkzNzg1'>window.options = { api_key:'NDYwLS01OTQ3MzYwYTkzNzg1',height:'100%',width:'100%',min_height:'535px'};var s = document.createElement('script');s.src = "http://www.vrcalendarsync.com/embed.js";s.async = true; document.body.appendChild(s);</script> -->
-						<div style="width: 100%">
-							<iframe class="xs-hide" src="https://www.homeescape.com/iframe/calendar/63135537/?o=h&m=9" frameborder="0" width="100%" height="650" id="calendar-container"></iframe>
-				            <iframe class="xs-show" src="https://www.homeescape.com/iframe/calendar/63135537/?o=v&m=3" frameborder="0" width="350" height="670" id="calendar-container"></iframe>
-						</div>						
+					<div class="row"><a class="btn btn-primary btn-lg" href="mailto:info@StClairRiverHouse.com?subject=St. Clair River House - Direct Booking Request">Request to Book</a>						
+
+					<!-- OwnerRez Three Month Calendar widget for St. Clair River House -->
+					<div class="ownerrez-widget" data-widgetId="f3e113e852ae49c893305bf064138571" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" style="height:350px;margin:0px auto;"></div>
+												
 				</div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -647,6 +646,7 @@
 		</div>	
         <!-- /.container -->
     </section>
+
 
     <!-- Map -->
     <section id="contact" class="map">
@@ -875,6 +875,9 @@ The St.Clair River House was built as a cottage in 1935 as a Detroiter's vacatio
 	
 	<!-- Lightbox -->
     <script src="js/ekko-lightbox.min.js"></script>
+	
+	<!-- Calendar -->
+	<script src="https://secure.ownerreservations.com/widget.js"></script>
 	
 	<!-- SCRH -->
     <script src="js/SCRH.js"></script>
